--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@1,700&display=swap');
 
 * {
-    background-color: #F0F0F0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body {
+    background-color: #F0F0F0;
+}
+
 p {
     font-family: 'Montserrat', serif;
     font-size: 15px;
+    color: #484546;
 }
 
 h2 {
@@ -18,13 +22,14 @@ h2 {
     text-align: center;
     font-size: 48px;
     font-weight: bold;
+    color: #484546;
 }
 
 h3 {
     font-family: 'Montserrat', cursive;
     color: #F8BBCD;
     font-size: 24px;
-    font-weight: 600;
+    font-weight: bold;
 }
 
 .header {
@@ -32,6 +37,11 @@ h3 {
     align-items: center;
     padding: 20px;
 }
+
+.header h1 {
+    margin-left: 30%;
+}
+
 
 .logo {
     width: 100px;
@@ -41,18 +51,23 @@ h3 {
 h1 {
     font-family: "Dancing Script", cursive;
     font-size: 48px;
+    color: #484546;
 }
 
 .navbar ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
+
 }
 
 .navbar li a {
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
     padding: 10px;
+    text-transform: uppercase;
+    color: #484546;
+    font-size: 20px;
 }
 
 .container {
@@ -82,6 +97,12 @@ h1 {
     border-radius: 10px;
 }
 
+img {
+    background-color: transparent;
+    background-image: none;
+}
+
+
 .product-details {
     max-width: 400px;
     display: flex;
@@ -97,6 +118,12 @@ button {
     border: 2px solid #F8BBCD;
     background: none;
     color: #F8BBCD;
+    width: 229px;
+    height: 65px;
+    font-family: 'Montserrat', serif;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 30px;
 }
 
 .buy {
@@ -114,6 +141,10 @@ button {
 
 .content {
     display: flex;
+    align-items: center;
+    align-content: center;
+    justify-items: center;
+    margin-left: 100px;
 }
 
 .gallery img{
@@ -122,11 +153,198 @@ button {
 }
 
 .price {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin-top: -10px;
+}
+
+.price p {
     color: #F8BBCD;
     font-weight: bold;
     font-size: 24px;
+    text-align: right;
 }
 
 .description {
     text-align: justify;
+}
+
+.breadcrumb {
+    padding: 35px;
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+    font-family: 'Montserrat', serif;
+}
+
+.breadcrumb a {
+    text-decoration: none;
+    color: #484546;
+    margin-left: 95px;
+}
+
+.footer {
+    background-color: #F8BBCD;
+    color: white;
+    padding: 20px;
+    text-align: center;
+
+}
+
+.footer p {
+    background-color: transparent;
+    color: white;
+    padding: 15px;
+    text-align: center;
+}
+
+.footer b {
+    background-color: transparent;
+    color: white;
+    text-align: center;
+}
+
+.stock {
+    width: 158px;
+    height: 65px;
+    border-radius: 30px;
+    background-color: white;
+    display: flex;
+    gap: 15px;
+    padding: 10px;
+    align-items: center;
+}
+
+.stock p {
+    background-color: transparent;
+    font-family: 'Montserrat', serif;
+    color: #484546;
+    font-weight: 800;
+}
+
+.less {
+    background-color: #F8BBCD;
+    color: white;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.plus {
+    background-color: #F8BBCD;
+    color: white;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.buttons {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+
+}
+
+.card {
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 15px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-gallery {
+    align-items: center;
+    width: 167px;
+    height: 157px;
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 15px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.footer .social-media {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.twitter, .instagram {
+    width: 30px;
+    height: 30px;
+}
+
+.instagram {
+    width: 34px;
+    height: 34px;
+}
+
+.facebook {
+    width: 14px;
+    height: 28px;
+}
+
+.footer .about-us,
+.footer {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.footer .sitemap a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Montserrat', serif;
+}
+
+.footer h3{ 
+    font-family: 'Montserrat', serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.header-icons {
+    display: flex;
+    gap: 20px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.header-icons .icon img {
+    width: 16px;
+    height: 16px;
+}
+
+
+.stars {
+    display: flex;
+    gap: 2px;
+    margin-top: 10px;
+}
+
+.stars p {
+    text-decoration: underline;
+}
+
+.star {
+    width: 20px;
+    height: 20px;
 }
